# No-Code-Model-Trainer

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  E2E_TESTING_GUIDE.md  LOCAL_TESTING_CHECKLIST.md  README.md  README_NEW.md  SETUP_GUIDE.md  TESTING_FLOW.md  TESTING_GUIDE.md  TODO.md  nixpacks.toml  package.json  quick_start.sh  railway.toml  start.sh  test_api.sh  vercel.json
.claude/: settings.json
agents/: pyproject.toml
agents/agents/: __init__.py  base.py  cache.py  clean_agent.py  data.py  deploy_agent.py  eval_agent.py  intent.py  memory.py  ml_core.py  model.py  model_catalog.py  pipeline.py  rubric.py  schemas.py  train_agent.py  training_insights.py  validators.py
agents/services/: code_generator.py  modal_runner.py  tracer.py
agents/tests/: test_clean_agent.py  test_code_generator.py  test_confusion_matrix.py  test_context_summarization.py  test_data_agent.py  test_deploy_agent.py  test_e2e_flow.py  test_ece.py  test_episodic_memory.py  test_hitl.py  test_intent_agent.py  test_memoization.py  test_modal_runner.py  test_model_routing.py  test_ner_training.py  test_noise_detection.py  test_observability.py  test_rubric.py  test_semantic_validators.py  test_tracer.py
backend/: .env.backup  .env.example  9497d7e2-2d4e-452d-b44b-a9bc40a2d6ad  REGISTRY_SETUP.md  app.py  auth.py  chat_agent.py  customer_support_intent.csv  dataset_validator.py  default_param_schemas.py  hparam_suggester.py  hyperopt_runner.py  llm_param_schema.py  llm_service.py  main.py  model_params.py  report_generator.py  requirements-hf.txt  (+7 more)
(+145 files in other folders)
