[project]
name = "modelforge-agents"
version = "0.1.0"
description = "Claude Agent SDK orchestration for ModelForge training pipeline"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-mock>=3.14.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
